--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "packagefinder",
-  "displayName": "PackageFinder",
-  "description": "You need the npm package, you can find it here, add it to your project and then install it",
+  "displayName": "Package Finder",
+  "description": "A VS Code extension to search for and install npm or yarn packages.",
   "version": "0.0.1",
+  "icon": "images/packagefinder.webp",
+  "publisher": "Marcin Domagala",
   "engines": {
     "vscode": "^1.93.0"
   },
@@ -14,8 +16,15 @@
   "contributes": {
     "commands": [
       {
-        "command": "packagefinder.helloWorld",
+        "command": "packagefinder.finder",
         "title": "Package Finder"
+      }
+    ],
+    "keybindings": [
+      {
+        "command": "packagefinder.finder",
+        "key": "ctrl+alt+i",
+        "mac": "shift+cmd+i"
       }
     ]
   },
